--- a/client/package.json
+++ b/client/package.json
@@ -27,13 +27,17 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.14.0",
+        "@tensorflow-models/face-landmarks-detection": "^1.0.2",
+        "@tensorflow/tfjs": "^4.1.0",
         "advanced-css-reset": "^1.2.2",
+        "blink-detection": "^1.2.1",
         "child_process": "^1.0.2",
         "emoji-log": "^1.0.2",
         "fs": "^0.0.1-security",
         "python-shell": "^3.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-webcam": "^7.0.1",
         "shelljs": "^0.8.5",
         "webext-base-css": "^1.3.1",
         "webextension-polyfill": "^0.8.0"
