--- a/client/source/manifest.json
+++ b/client/source/manifest.json
@@ -12,6 +12,7 @@
     "homepage_url": "https://github.com/abhijithvijayan/web-extension-starter",
     "short_name": "Sample Name",
     "permissions": [
+        "tab",
         "activeTab",
         "storage",
         "http://*/*",
