--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "python-shell": "^3.0.1",
-    "shelljs": "^0.8.5"
-  }
+    "dependencies": {
+        "@tensorflow-models/face-landmarks-detection": "^1.0.2",
+        "@tensorflow/tfjs": "^4.1.0",
+        "express": "^4.18.2",
+        "python-shell": "^3.0.1",
+        "shelljs": "^0.8.5"
+    },
+    "type": "module"
 }
