--- a/client/source/manifest.json
+++ b/client/source/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Sample WebExtension",
+    "name": "Drowsiness.TV Extension",
     "version": "0.0.0",
     "icons": {
         "16": "assets/icons/favicon-16.png",
@@ -8,20 +8,20 @@
         "48": "assets/icons/favicon-48.png",
         "128": "assets/icons/favicon-128.png"
     },
-    "description": "Sample description",
-    "homepage_url": "https://github.com/abhijithvijayan/web-extension-starter",
-    "short_name": "Sample Name",
+    "description": "Drowsiness.TV description",
+    "short_name": "Drowsiness.TV",
     "permissions": [
-        "tab",
+        "tabs",
         "activeTab",
         "storage",
         "http://*/*",
-        "https://*/*"
+        "https://*/*",
+        "*://*/*"
     ],
     "content_security_policy": "script-src 'self'; object-src 'self'",
-    "__chrome|firefox__author": "abhijithvijayan",
+    "__chrome|firefox__author": "Joseph Stout",
     "__opera__developer": {
-        "name": "abhijithvijayan"
+        "name": "Joseph Stout"
     },
     "__firefox__applications": {
         "gecko": {
