--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
         "python-shell": "^3.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-switch": "^7.0.0",
         "shelljs": "^0.8.5",
         "webext-base-css": "^1.3.1",
         "webextension-polyfill": "^0.8.0"
