--- a/client/source/manifest.json
+++ b/client/source/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Sample WebExtension",
+    "name": "Drowsiness.TV Extension",
     "version": "0.0.0",
     "icons": {
         "16": "assets/icons/favicon-16.png",
